# starcm

./: .buildifier.json  .gitignore  BUILD.bazel  LICENSE  MODULE.bazel  Makefile  README.md  example.star  go.mod  go.sum  go.work  go.work.sum  main.go  main_test.go  only_if.star  shellout.star  starlark_go_LICENSE  z.star
.github/workflows/: release.yml  scrut.yml
_testing/integration/: BUILD.bazel  all_examples_test.go  all_integration_test.go  go.mod  walk_examples.go
examples/: BUILD.bazel  download_and_load.star  echo.star  example.star  expect_exit_code_non_zero.star  go.mod  if_statements.star  only_if.star  ping_apple.star  ping_google_with_timeout.star  x.star
examples/download/: a_file.star  download_and_load.star  download_and_load_test.go  go.mod
examples/download/download_and_load/: download_and_load.star
examples/download/load_remote/: load_remote.star  load_remote.star.expect  load_remote_macro.star  load_remote_macro.star.expect
examples/echo/: echo.star  echo.star.expect  echo_test.go  test_echo.md
examples/exec/: expect_timeout_shell.star  expect_timeout_shell.star.expect
examples/exec/exit_codes/: unexpected.star
examples/exec/exit_non_zero/: expect_exit_code_non_zero.star  expect_exit_code_non_zero.star.expect
examples/files/: create.star
examples/if_statements/: if_statements.expect  if_statements.star  if_statements.star.expect
examples/install_a_pkg_from_server/: bootstrap.star  build-info.json  install_json_pkg.star
examples/install_a_pkg_from_server/payload/opt/: example.json
examples/load_from_loop/: loop.star  loop.star.expect
examples/multiple_files/: a.star
examples/multiple_files/subfolder/subfolder2/subfolder3/: d.star
examples/nested_files/: a.star  a.star.expect  e.star
examples/nested_files/subfolder/: b.star
examples/nested_files/subfolder/subfolder2/: c.star
examples/only_if/: only_if.star  only_if.star.expect
examples/ping/: ping_google_with_timeout.star
examples/shellout/: shellout.star
examples/templates/: example.tpl  template.star
examples/templates/santa/: santa.star  santa.star.expect  santa.tmpl  santa.tpl
examples/templates/simple/: example.tpl  hello_world.tpl  template.star
examples/write/: write.star  write.star.expect
functions/base/: BUILD.bazel  base.go  result.go
functions/download/: BUILD.bazel  download.go  download_test.go
functions/dynamic_loading/: BUILD.bazel  dynamic.go
functions/example/: example.go
functions/file/: BUILD.bazel  file.go
functions/shard/: BUILD.bazel  shard.go
functions/shell/: BUILD.bazel  shell.go
functions/template/: BUILD.bazel  template.go  template_test.go
functions/write/: BUILD.bazel  write.go
internal/loading/: BUILD.bazel  dynamic.go  loading.go  sequential.go
libraries/diffutils/: BUILD.bazel  diff.go
libraries/fileutils/: BUILD.bazel  fileutils.go
libraries/loader/: BUILD.bazel  loader.go
libraries/logging/: BUILD.bazel  log.go
libraries/sha256/: BUILD.bazel  sha256.go
libraries/shell/: BUILD.bazel  multiwriter.go  shell.go  shell_test.go
modules/base/: base.go  result.go
modules/example/: example.go
modules/shell/: shell.go
shell/: shell.go
starlark-helpers/: BUILD.bazel  dict.go  helpers.go
testhelpers/aferohelpers/: BUILD.bazel  mockafero.go
