load("@gazelle//:def.bzl", "gazelle")
load("@rules_go//go:def.bzl", "go_binary", "go_library")

gazelle(name = "gazelle")

go_library(
    name = "starcm_lib",
    srcs = ["main.go"],
    importpath = "github.com/discentem/starcm",
    visibility = ["//visibility:private"],
    deps = [
        "//functions/download",
        "//functions/shard",
        "//functions/shell",
        "//functions/template",
        "//functions/write",
        "//internal/loading",
        "//libraries/logging",
        "//libraries/shell",
        "//starlark-helpers",
        "@com_github_google_deck//:deck",
        "@com_github_google_deck//backends/logger",
        "@com_github_spf13_afero//:afero",
        "@net_starlark_go//starlark",
        "@net_starlark_go//starlarkstruct",
        "@net_starlark_go//syntax",
    ],
)

go_binary(
    name = "starcm",
    data = ["examples"],
    embed = [":starcm_lib"],
    visibility = ["//visibility:public"],
)
