load("@gazelle//:def.bzl", "gazelle")
load("@rules_go//go:def.bzl", "go_binary", "go_library")

gazelle(name = "gazelle")

go_library(
    name = "starcm_lib",
    srcs = ["main.go"],
    importpath = "github.com/discentem/starcm",
    visibility = ["//visibility:private"],
    deps = [
        "//libraries/loader",
        "//libraries/shell",
        "@com_github_google_deck//:deck",
        "@com_github_google_deck//backends/logger",
        "@com_github_spf13_afero//:afero",
    ],
)

go_binary(
    name = "starcm",
    data = ["examples"],
    embed = [":starcm_lib"],
    visibility = ["//visibility:public"],
)
