bazel_dep(name = "rules_go", version = "0.50.1")
bazel_dep(name = "gazelle", version = "0.50.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "com_github_google_deck", "com_github_google_go_cmp", "com_github_google_logger", "com_github_mitchellh_go_homedir", "com_github_noirbizarre_gonja", "com_github_spf13_afero", "com_github_stretchr_testify", "com_github_urfave_cli_v2", "net_starlark_go")
