load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "starlark-helpers",
    srcs = ["helpers.go"],
    importpath = "github.com/discentem/starcm/starlark-helpers",
    visibility = ["//visibility:public"],
    deps = [
        "//libraries/logging",
        "@com_github_google_deck//:deck",
        "@net_starlark_go//starlark",
    ],
)
