load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "integration",
    srcs = ["walk_examples.go"],
    importpath = "github.com/discentem/starcm/_testing/integration",
    visibility = ["//visibility:public"],
    deps = ["@com_github_stretchr_testify//assert:go_default_library"],
)

go_test(
    name = "integration_test",
    srcs = ["all_examples_test.go"],
    embed = [":integration"],
    deps = ["@com_github_stretchr_testify//assert:go_default_library"],
)
