load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "base",
    srcs = [
        "base.go",
        "result.go",
    ],
    importpath = "github.com/discentem/starcm/functions/base",
    visibility = ["//visibility:public"],
    deps = [
        "//libraries/logging",
        "//starlark-helpers",
        "@com_github_google_deck//:deck",
        "@com_github_google_logger//:logger",
        "@net_starlark_go//starlark",
        "@net_starlark_go//starlarkstruct",
    ],
)
