load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "loading",
    srcs = ["dynamic.go"],
    importpath = "github.com/discentem/starcm/internal/loading",
    visibility = ["//:__subpackages__"],
    deps = [
        "//libraries/logging",
        "//starlark-helpers",
        "@com_github_google_deck//:deck",
        "@net_starlark_go//starlark",
    ],
)

go_library(
    name = "dynamic_loading",
    srcs = ["dynamic.go"],
    importpath = "github.com/discentem/starcm/functions/dynamic_loading",
    visibility = ["//visibility:public"],
    deps = [
        "//libraries/logging",
        "//starlark-helpers",
        "@com_github_google_deck//:deck",
        "@net_starlark_go//starlark",
    ],
)
