load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "template",
    srcs = ["template.go"],
    importpath = "github.com/discentem/starcm/functions/template",
    visibility = ["//visibility:public"],
    deps = [
        "//functions/base",
        "//libraries/logging",
        "//starlark-helpers",
        "@com_github_google_deck//:go_default_library",
        "@com_github_noirbizarre_gonja//:go_default_library",
        "@com_github_spf13_afero//:go_default_library",
        "@net_starlark_go//starlark:go_default_library",
    ],
)
