load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "template",
    srcs = ["template.go"],
    importpath = "github.com/discentem/starcm/functions/template",
    visibility = ["//visibility:public"],
    deps = [
        "//functions/base",
        "//libraries/logging",
        "//starlark-helpers",
        "@com_github_google_deck//:deck",
        "@com_github_noirbizarre_gonja//:gonja",
        "@com_github_spf13_afero//:afero",
        "@net_starlark_go//starlark",
    ],
)
