load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "template",
    srcs = ["template.go"],
    importpath = "github.com/discentem/starcm/functions/template",
    visibility = ["//visibility:public"],
    deps = [
        "//functions/base",
        "//libraries/fileutils",
        "//libraries/logging",
        "//starlark-helpers",
        "@com_github_google_deck//:deck",
        "@com_github_noirbizarre_gonja//:gonja",
        "@com_github_sergi_go_diff//diffmatchpatch",
        "@com_github_spf13_afero//:afero",
        "@net_starlark_go//starlark",
    ],
)

go_test(
    name = "template_test",
    srcs = ["template_test.go"],
    embed = [":template"],
    deps = [
        "//starlark-helpers",
        "//testhelpers/aferohelpers",
        "@com_github_noirbizarre_gonja//:gonja",
        "@com_github_spf13_afero//:afero",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@net_starlark_go//starlark",
    ],
)
