load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "loading",
    srcs = ["dynamic.go"],
    importpath = "github.com/discentem/starcm/internal/loading",
    visibility = ["//:__subpackages__"],
    deps = [
        "//libraries/logging",
        "//starlark-helpers",
        "@com_github_google_deck//:go_default_library",
        "@net_starlark_go//starlark:go_default_library",
    ],
)
