load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "loading",
    srcs = [
        "dynamic.go",
        "loading.go",
    ],
    importpath = "github.com/discentem/starcm/internal/loading",
    visibility = ["//:__subpackages__"],
    deps = [
        "//functions/download",
        "//functions/shard",
        "//functions/shell",
        "//functions/template",
        "//functions/write",
        "//libraries/logging",
        "//libraries/shell",
        "//starlark-helpers",
        "@com_github_google_deck//:deck",
        "@com_github_spf13_afero//:afero",
        "@net_starlark_go//starlark",
        "@net_starlark_go//starlarkstruct",
        "@net_starlark_go//syntax",
    ],
)
